--- a/SuperTextField/en.lproj/ViewController.xib
+++ b/SuperTextField/en.lproj/ViewController.xib
@@ -44,7 +44,7 @@
 							<object class="IBUITextField" id="467944743">
 								<reference key="NSNextResponder" ref="496349676"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{48, 6}, {230, 31}}</string>
+								<string key="NSFrame">{{48, 0}, {230, 44}}</string>
 								<reference key="NSSuperview" ref="496349676"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="508202113"/>
@@ -71,18 +71,18 @@
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">12</double>
+									<double key="pointSize">15</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">12</double>
+									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUILabel" id="1011978307">
 								<reference key="NSNextResponder" ref="496349676"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 6}, {34, 31}}</string>
+								<string key="NSFrameSize">{40, 44}</string>
 								<reference key="NSSuperview" ref="496349676"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="467944743"/>
@@ -100,7 +100,7 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUITextAlignment">2</int>
+								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
@@ -277,8 +277,8 @@
 						<reference key="object" ref="496349676"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="508202113"/>
-							<reference ref="1011978307"/>
 							<reference ref="467944743"/>
+							<reference ref="1011978307"/>
 						</array>
 						<reference key="parent" ref="774585933"/>
 					</object>
